# MarketMimic

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
models/v0.1/: ckpt-1.data-00000-of-00001  ckpt-1.index  ckpt-10.data-00000-of-00001  ckpt-10.index  ckpt-11.data-00000-of-00001  ckpt-11.index  ckpt-2.data-00000-of-00001  ckpt-2.index  ckpt-3.data-00000-of-00001  ckpt-3.index  ckpt-4.data-00000-of-00001  ckpt-4.index  ckpt-5.data-00000-of-00001  ckpt-5.index  ckpt-6.data-00000-of-00001  ckpt-6.index  ckpt-7.data-00000-of-00001  ckpt-7.index  ckpt-8.data-00000-of-00001  ckpt-8.index  ckpt-9.data-00000-of-00001  ckpt-9.index  scalers.pkl
src/: re-train.py  train.py
src/marketmimic/: constants.py  data.py  file.py  loss.py  metric.py  model.py  training.py  utils.py
tests/extended/: test_gpu.py
tests/other/: test_gpu.py
tests/unit/: test_data.py  test_utils.py
